--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "contentful-typescript-codegen --output contentful-types.d.ts"
   },
   "dependencies": {
     "contentful": "^9.1.10",
@@ -17,9 +18,11 @@
   "devDependencies": {
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
+    "contentful-management": "^8.1.3",
     "contentful-typescript-codegen": "^3.2.3",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "prettier": "^2.5.1",
     "typescript": "4.5.5"
   }
 }
