--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.11.1",
+    "bootstrap": "^5.1.3",
     "contentful": "^9.1.10",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reactstrap": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
